Extend Actuator and Docker Configuration - Modify configuration for Actuator - Include Docker / Docker-Compose - Add a Hello World Flux Server

--- a/hello-rest-server/src/main/resources/application.yml
+++ b/hello-rest-server/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: actuator-server
+    name: hello-rest-server
 
 server:
-  port: 8891
+  port: 8080
 
 eureka:
   instance:
