--- a/eureka-server/src/main/resources/application.yml
+++ b/eureka-server/src/main/resources/application.yml
@@ -2,17 +2,16 @@ spring:
   application:
     name: eureka-server
 
-  boot:
-    admin:
-      client:
-        url: http://localhost:8080
 server:
-  port: 8761
+  port: 8890
 
 eureka:
   client:
     registerWithEureka: false
     fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+
   server:
     waitTimeInMsWhenSyncEmpty: 0
 
