--- a/actuator-server/src/main/resources/application.yml
+++ b/actuator-server/src/main/resources/application.yml
@@ -2,6 +2,10 @@ spring:
   application:
     name: actuator-server
 
+  boot:
+    admin:
+      context-path: /actuator-page
+
 server:
   port: 8891
 
