Implement Load Balancer - Configure Load Balancer - Add Gatling for testing - Reconfiger API Gateway and close external Ports to the services.

--- a/actuator-server/src/main/resources/application.yml
+++ b/actuator-server/src/main/resources/application.yml
@@ -5,6 +5,8 @@ spring:
   boot:
     admin:
       context-path: /actuator-page
+      ui:
+        public-url: http://127.0.0.1:8080/actuator-service/
 
 server:
   port: 8891
