Securing HTTP -> HTTPS - Add Certificates - Modify Links and change Actuator in a separate Server (PORT)

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,7 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### KEYS
+/gateway-server/src/main/resources/keystore/*.jks
+/gateway-server/src/main/resources/keystore/*.p12
