--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -1,9 +1,11 @@
 spring:
   application:
-    name: authentication-server
+    name: authorization-server
 
 server:
   port: 8893
+  servlet:
+    context-path: /gate
 
 eureka:
   instance:
@@ -13,6 +15,10 @@ eureka:
       startup: ${random.int}    #needed to trigger info and endpoint update after restart
 
 management:
+  server:
+    port: 8894
+  security:
+    enabled: false
   endpoints:
     web:
       exposure:
@@ -27,4 +33,8 @@ management:
 
   zipkin.tracing.endpoint: http://zipkin-server:9411/api/v2/spans
 
-logging.pattern.level: "trace_id=%mdc{traceId} span_id=%mdc{spanId} trace_flags=%mdc{traceFlags} %p"
+logging:
+  pattern.level: "trace_id=%mdc{traceId} span_id=%mdc{spanId} trace_flags=%mdc{traceFlags} %p"
+  level:
+    org.springframework.security: DEBUG
+    org.springframework.web: DEBUG
