--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,15 +23,16 @@ services:
     networks:
       - server-net
 
-  authentication-server:
-    container_name: authentication-server
+  authorization-server:
+    container_name: authorization-server
     depends_on:
       - "eureka-server"
     environment:
       - "spring_profiles_active=docker"
-    build: ./authentication-server/
-    ports:
-      - "8893:8893"
+    build: ./authorization-server/
+#    ports:
+#      - "8893:8893"
+#      - "8894:8894"
     networks:
       - server-net
 
