Add MicroMeter and Zipkin

--- a/actuator-server/build.gradle
+++ b/actuator-server/build.gradle
@@ -26,6 +26,10 @@ ext {
 }
 
 dependencies {
+	implementation platform('io.micrometer:micrometer-tracing-bom:latest.release')
+	implementation 'io.micrometer:micrometer-tracing'
+	implementation("io.micrometer:micrometer-tracing-bridge-otel")
+	implementation("io.opentelemetry:opentelemetry-exporter-zipkin")
 	implementation 'de.codecentric:spring-boot-admin-starter-server'
 	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
