--- a/actuator-server/src/main/resources/application.yml
+++ b/actuator-server/src/main/resources/application.yml
@@ -27,4 +27,10 @@ management:
     health:
       show-details: ALWAYS
 
+  tracing:
+    enabled: true
+    sampling.probability: 1.0
 
+  zipkin.tracing.endpoint: http://zipkin-server:9411/api/v2/spans
+
+logging.pattern.level: "trace_id=%mdc{traceId} span_id=%mdc{spanId} trace_flags=%mdc{traceFlags} %p"
