--- a/hello-rest-server/src/main/resources/application.yml
+++ b/hello-rest-server/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
   application:
     name: hello-rest-server
 
+  zipkin:
+    baseUrl: http://zipkin-server:9411
+
 server:
   port: 8081
 
@@ -21,4 +24,10 @@ management:
     health:
       show-details: ALWAYS
 
+  tracing:
+    enabled: true
+    sampling.probability: 1.0
 
+  zipkin.tracing.endpoint: http://zipkin-server:9411/api/v2/spans
+
+logging.pattern.level: "trace_id=%mdc{traceId} span_id=%mdc{spanId} trace_flags=%mdc{traceFlags} %p"
