--- a/actuator-server/build.gradle
+++ b/actuator-server/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.1'
+	id 'org.springframework.boot' version '3.0.2'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'org.graalvm.buildtools.native' version '0.9.18'
 }
@@ -21,8 +21,8 @@ repositories {
 }
 
 ext {
-	set('springBootAdminVersion', "3.0.0-M4")
-	set('springCloudVersion', "2022.0.0")
+	set('springBootAdminVersion', "3.0.0")
+	set('springCloudVersion', "2022.0.1")
 }
 
 dependencies {
