--- a/authorization-server/build.gradle
+++ b/authorization-server/build.gradle
@@ -1,6 +1,6 @@
 plugins {
 	id 'java'
-	id 'org.springframework.boot' version '3.0.1'
+	id 'org.springframework.boot' version '3.0.2'
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -19,8 +19,8 @@ configurations {
 }
 
 ext {
-	set('springBootAdminVersion', "3.0.0-M4")
-	set('springCloudVersion', "2022.0.0")
+	set('springBootAdminVersion', "3.0.0")
+	set('springCloudVersion', "2022.0.1")
 }
 
 dependencies {
